<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainInspection">

    <Switch
        android:id="@+id/swCertificatAliment"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CertificatAliment"
        app:layout_constraintBottom_toTopOf="@+id/LiniaMainVisita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvInspeccioEstat"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple_200"
        android:padding="10dp"
        android:text="ESTA VISITA"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btHoraFi" />

    <TextView
        android:id="@+id/tvEstablimentDades2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:text="Inspector"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInspeccioEstat" />

    <TextView
        android:id="@+id/tvEstablimentDades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:text="Inspection date and time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInspeccioEstabliment" />

    <Button
        android:id="@+id/btHoraFi"
        style="?android:spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="00:00:00"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstablimentDades"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btHoraInici"
        style="?android:spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="00:00:00"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btDataInici"
        app:layout_constraintTop_toBottomOf="@+id/tvEstablimentDades"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEstablimentClient2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:text="Customer name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoContacte2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/purple_500"
        android:text="Floors list"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInspeccioEmpleat" />

    <TextView
        android:id="@+id/tvInspeccioEmpleat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:padding="0dp"
        android:text="EMPLEAT"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEstablimentDades2"
        app:layout_constraintTop_toBottomOf="@+id/tvInspeccioEstat" />

    <Button
        android:id="@+id/btDataInici"
        style="?android:spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="JAN 01 2023"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstablimentDades"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlantes"
        android:layout_width="fill_parent"
        android:layout_height="134dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoContacte2" />

    <TextView
        android:id="@+id/tvInspeccioEstabliment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="BAR DEL CENTRE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstablimentClient2" />

    <Switch
        android:id="@+id/swCertificatPlagues"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CertificatPlagues"
        app:layout_constraintBottom_toTopOf="@+id/swCertificatAliment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/LiniaMainVisita"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="102"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btStartVisita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="34"
            android:text="@string/comencarvisita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btFiVisita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="34"
            android:text="@string/finalitzarvisita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btImprimir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="34"
            android:text="@string/imprimirvisita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivFloor"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/swCertificatPlagues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPlantes"
        tools:src="@tools:sample/backgrounds/scenic" />
</androidx.constraintlayout.widget.ConstraintLayout>